--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,11 +143,11 @@ jobs:
 
       - name: Make target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
-        run: mkdir -p modules/shapes/.js/target modules/literal/.native/target modules/numbers-testing/.jvm/target modules/testing/jvm/target modules/extras/js/target modules/scalafix/internal/input/target modules/extras/native/target modules/scalafix/internal/tests/target modules/generic/jvm/target modules/shapes/.native/target target modules/generic-simple/.jvm/target modules/numbers/native/target modules/hygiene/native/target modules/literal/.jvm/target modules/parser/jvm/target modules/literal/.js/target .js/target modules/parser/js/target modules/scalajs/target modules/core/native/target docs/target modules/shapes/.jvm/target modules/testing/native/target modules/scalafix/internal/output/target modules/generic-simple/.native/target modules/jawn/jvm/target modules/parser/native/target modules/core/js/target modules/hygiene/jvm/target modules/testing/js/target modules/generic/js/target modules/jawn/js/target modules/numbers-testing/.native/target modules/hygiene/js/target modules/core/jvm/target modules/pointer-literal/.js/target modules/tests/js/target modules/refined/native/target modules/numbers-testing/.js/target .jvm/target modules/scalafix/internal/rules/target .native/target modules/pointer/.js/target modules/refined/js/target modules/pointer/.jvm/target modules/pointer-literal/.jvm/target modules/pointer-literal/.native/target modules/scodec/jvm/target modules/scodec/js/target modules/refined/jvm/target modules/scalajs-java-time-test/target modules/jawn/native/target modules/numbers/js/target modules/pointer/.native/target modules/tests/jvm/target modules/extras/jvm/target modules/generic/native/target modules/generic-simple/.js/target modules/scodec/native/target modules/numbers/jvm/target modules/benchmark/target modules/tests/native/target project/target
+        run: mkdir -p modules/shapes/.js/target modules/literal/.native/target modules/numbers-testing/.jvm/target modules/testing/jvm/target modules/extras/js/target modules/scalafix/internal/input/target modules/extras/native/target modules/scalafix/internal/tests/target modules/generic/jvm/target modules/shapes/.native/target target modules/generic-simple/.jvm/target modules/numbers/native/target modules/hygiene/native/target modules/literal/.jvm/target modules/parser/jvm/target modules/literal/.js/target .js/target modules/parser/js/target modules/scalajs/target modules/core/native/target site/target modules/shapes/.jvm/target modules/testing/native/target modules/scalafix/internal/output/target modules/generic-simple/.native/target modules/jawn/jvm/target modules/parser/native/target modules/core/js/target modules/hygiene/jvm/target modules/testing/js/target modules/generic/js/target modules/jawn/js/target modules/numbers-testing/.native/target modules/hygiene/js/target modules/core/jvm/target modules/pointer-literal/.js/target modules/tests/js/target modules/refined/native/target modules/numbers-testing/.js/target .jvm/target modules/scalafix/internal/rules/target .native/target modules/pointer/.js/target modules/refined/js/target modules/pointer/.jvm/target modules/pointer-literal/.jvm/target modules/pointer-literal/.native/target modules/scodec/jvm/target modules/scodec/js/target modules/refined/jvm/target modules/scalajs-java-time-test/target modules/jawn/native/target modules/numbers/js/target modules/pointer/.native/target modules/tests/jvm/target modules/extras/jvm/target modules/generic/native/target modules/generic-simple/.js/target modules/scodec/native/target modules/numbers/jvm/target modules/benchmark/target modules/tests/native/target project/target
 
       - name: Compress target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
-        run: tar cf targets.tar modules/shapes/.js/target modules/literal/.native/target modules/numbers-testing/.jvm/target modules/testing/jvm/target modules/extras/js/target modules/scalafix/internal/input/target modules/extras/native/target modules/scalafix/internal/tests/target modules/generic/jvm/target modules/shapes/.native/target target modules/generic-simple/.jvm/target modules/numbers/native/target modules/hygiene/native/target modules/literal/.jvm/target modules/parser/jvm/target modules/literal/.js/target .js/target modules/parser/js/target modules/scalajs/target modules/core/native/target docs/target modules/shapes/.jvm/target modules/testing/native/target modules/scalafix/internal/output/target modules/generic-simple/.native/target modules/jawn/jvm/target modules/parser/native/target modules/core/js/target modules/hygiene/jvm/target modules/testing/js/target modules/generic/js/target modules/jawn/js/target modules/numbers-testing/.native/target modules/hygiene/js/target modules/core/jvm/target modules/pointer-literal/.js/target modules/tests/js/target modules/refined/native/target modules/numbers-testing/.js/target .jvm/target modules/scalafix/internal/rules/target .native/target modules/pointer/.js/target modules/refined/js/target modules/pointer/.jvm/target modules/pointer-literal/.jvm/target modules/pointer-literal/.native/target modules/scodec/jvm/target modules/scodec/js/target modules/refined/jvm/target modules/scalajs-java-time-test/target modules/jawn/native/target modules/numbers/js/target modules/pointer/.native/target modules/tests/jvm/target modules/extras/jvm/target modules/generic/native/target modules/generic-simple/.js/target modules/scodec/native/target modules/numbers/jvm/target modules/benchmark/target modules/tests/native/target project/target
+        run: tar cf targets.tar modules/shapes/.js/target modules/literal/.native/target modules/numbers-testing/.jvm/target modules/testing/jvm/target modules/extras/js/target modules/scalafix/internal/input/target modules/extras/native/target modules/scalafix/internal/tests/target modules/generic/jvm/target modules/shapes/.native/target target modules/generic-simple/.jvm/target modules/numbers/native/target modules/hygiene/native/target modules/literal/.jvm/target modules/parser/jvm/target modules/literal/.js/target .js/target modules/parser/js/target modules/scalajs/target modules/core/native/target site/target modules/shapes/.jvm/target modules/testing/native/target modules/scalafix/internal/output/target modules/generic-simple/.native/target modules/jawn/jvm/target modules/parser/native/target modules/core/js/target modules/hygiene/jvm/target modules/testing/js/target modules/generic/js/target modules/jawn/js/target modules/numbers-testing/.native/target modules/hygiene/js/target modules/core/jvm/target modules/pointer-literal/.js/target modules/tests/js/target modules/refined/native/target modules/numbers-testing/.js/target .jvm/target modules/scalafix/internal/rules/target .native/target modules/pointer/.js/target modules/refined/js/target modules/pointer/.jvm/target modules/pointer-literal/.jvm/target modules/pointer-literal/.native/target modules/scodec/jvm/target modules/scodec/js/target modules/refined/jvm/target modules/scalajs-java-time-test/target modules/jawn/native/target modules/numbers/js/target modules/pointer/.native/target modules/tests/jvm/target modules/extras/jvm/target modules/generic/native/target modules/generic-simple/.js/target modules/scodec/native/target modules/numbers/jvm/target modules/benchmark/target modules/tests/native/target project/target
 
       - name: Upload target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
@@ -396,3 +396,87 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           flags: ${{matrix.scala}}
+
+  site:
+    name: Generate Site
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        java: [temurin@8]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout current branch (full)
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Download Java (temurin@8)
+        id: download-java-temurin-8
+        if: matrix.java == 'temurin@8'
+        uses: typelevel/download-java@v2
+        with:
+          distribution: temurin
+          java-version: 8
+
+      - name: Setup Java (temurin@8)
+        if: matrix.java == 'temurin@8'
+        uses: actions/setup-java@v3
+        with:
+          distribution: jdkfile
+          java-version: 8
+          jdkFile: ${{ steps.download-java-temurin-8.outputs.jdkFile }}
+
+      - name: Download Java (temurin@11)
+        id: download-java-temurin-11
+        if: matrix.java == 'temurin@11'
+        uses: typelevel/download-java@v2
+        with:
+          distribution: temurin
+          java-version: 11
+
+      - name: Setup Java (temurin@11)
+        if: matrix.java == 'temurin@11'
+        uses: actions/setup-java@v3
+        with:
+          distribution: jdkfile
+          java-version: 11
+          jdkFile: ${{ steps.download-java-temurin-11.outputs.jdkFile }}
+
+      - name: Download Java (temurin@17)
+        id: download-java-temurin-17
+        if: matrix.java == 'temurin@17'
+        uses: typelevel/download-java@v2
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Setup Java (temurin@17)
+        if: matrix.java == 'temurin@17'
+        uses: actions/setup-java@v3
+        with:
+          distribution: jdkfile
+          java-version: 17
+          jdkFile: ${{ steps.download-java-temurin-17.outputs.jdkFile }}
+
+      - name: Cache sbt
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.sbt
+            ~/.ivy2/cache
+            ~/.coursier/cache/v1
+            ~/.cache/coursier/v1
+            ~/AppData/Local/Coursier/Cache/v1
+            ~/Library/Caches/Coursier/v1
+          key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
+
+      - name: Generate site
+        run: sbt docs/tlSite
+
+      - name: Publish site
+        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/series/0.14.x'
+        uses: peaceiris/actions-gh-pages@v3.9.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: site/target/docs/site
+          keep_files: true
